--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ NEXT_PUBLIC_DISCORD_ID="123456789"
 NEXT_PUBLIC_COUNTRY_NAME="Earth"
 
 # Role
-NEXT_PUBLIC_Role="frontend"
+NEXT_PUBLIC_ROLE="frontend"
 
 # Brand name
 NEXT_PUBLIC_BRAND_NAME="coder"
